--- a/css/style.css
+++ b/css/style.css
@@ -24,16 +24,23 @@ a { text-decoration:none; color:#888; cursor:pointer; }
 /* nav panel */
 #nav {
 	position:fixed;
-	top:0; left:-190px; width:160px; height:100%;
-	padding:40px 0 0 40px; 
+	top:0; left:-10.875em; width:10em; height:100%;
+	padding:1em 0 0 1.5em; 
 	line-height:1.6;
 	color: #888;
-	border-right: 1px solid #ddd; 
+	border-right: 1px solid #333; /*ddd*/
 	background-color:inherit;
 	font-weight: bold;
 	z-index: 1000; 
-	box-shadow: 1px 1px 2px #555;
+	box-shadow: 1px 1px 2px #ccc; /*555*/
 }
+@media screen and (min-height: 20em) {
+	#nav { padding-top:2em; }
+}
+@media screen and (min-height: 37.5em) {
+	#nav { padding-top:2.5em; }
+}
+
 #nav a { color:inherit; }
 #nav h1 { font-size:1.1em; font-weight:normal; }
 #nav ul { list-style:none; margin-top:2px; }
@@ -94,12 +101,12 @@ a { text-decoration:none; color:#888; cursor:pointer; }
 	border-right:1px solid;
 }
 
-.post-content { padding-left:.625em; color:#c8c8c8;}
+.post-content { padding-left:.625em; }
 
 
 /* settings widget */
 #settings { 
-	position:fixed; right:-140px; top:250px;
+	position:fixed; right:-141px; top:250px;
 	height: 325px; width: 130px;
 	border-left: 1px solid;
 	text-align:right;
